--- a/Mediator.Dhionys.csproj
+++ b/Mediator.Dhionys.csproj
@@ -4,6 +4,26 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageId>Mediator.Dhionys</PackageId>
+    <Version>1.0.0</Version>
+    <License>MIT</License>
+    <Authors>Dhionys Soares</Authors>
+    <Company>balta.io</Company>
+    <PackageDescription>Mediator</PackageDescription>
+    <Description>Mediator</Description>
+    <RepositoryUrl>https://github.com/dhionys-soares/Mediator.Dhionys</RepositoryUrl>
+
+    <PackageProjectUrl>https://github.com/dhionys-soares/Mediator.Dhionys</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageIcon>icon.png</PackageIcon>
+    <PackageTags>Mediator;Design Pattern;Domain;DDD;</PackageTags>
+
+    <Title>Mediator.Dhionys</Title>
+    <Summary>Abstractions for Mediator Pattern implementations</Summary>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <None Include="\icon.png" Pack="true" PackagePath="\"/>
+  </ItemGroup>
 
 </Project>
