--- a/Mediator.Dhionys.csproj
+++ b/Mediator.Dhionys.csproj
@@ -25,5 +25,9 @@
   <ItemGroup>
     <None Include="\icon.png" Pack="true" PackagePath="\"/>
   </ItemGroup>
+  
+  <ItemGroup>
+    <Content Include=".github\workflows\main.yml" />
+  </ItemGroup>
 
 </Project>
