--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@main
         
       - name: Set up .NET Core
-        uses: actions.setup-dotnet@v1
+        uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '8.0.x'
           
